Added Goals text file
-Added Goals.txt to outline/keep track of different tasks that need to
be scripted and potential scripts for when core is completed.
-Added root nodes for Malware and General/Other.
-Added "General" child node under Networking. Moved Reset TCP/IP Stack
and Reset Winsock Stack to this general tab instead of leaving under
WiFi.

--- a/HelpDesk Utilities/HelpDesk Utilities.csproj
+++ b/HelpDesk Utilities/HelpDesk Utilities.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="FixIcon.ico" />
+    <Content Include="Goals.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
