--- a/HelpDesk Utilities/HelpDesk Utilities.csproj
+++ b/HelpDesk Utilities/HelpDesk Utilities.csproj
@@ -38,6 +38,7 @@
     <ApplicationIcon>FixIcon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -54,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppStats.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
